wip: simulation test